--- a/public/css/noMatch.css
+++ b/public/css/noMatch.css
@@ -13,7 +13,7 @@ img {
 display: inline-block;
 padding: 0.5em 1em;
 text-decoration: none;
-background: #009900;/*ボタン色*/
+background: red;/*ボタン色*/
 color: #FFF;
 border-bottom: solid 4px #627295;
 border-radius: 3px;
