--- a/public/css/friend.css
+++ b/public/css/friend.css
@@ -22,7 +22,7 @@ img {
   padding: 0.25em 0.5em;
   text-decoration: none;
   color: #FFF;
-  background: #03A9F4;/*色*/
+  background: #33CC00;/*色*/
   border: solid 1px #0f9ada;/*線色*/
   border-radius: 4px;
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
@@ -52,6 +52,7 @@ p {
   border-bottom: 2px solid red;
 }
 
-.p-bottom {
-  margin-top: -0.3em;
+.green {
+  color: green;
+  /*border-bottom: 2px solid green;*/
 }
